--- a/Views/adTutorial/adTutorial.cshtml
+++ b/Views/adTutorial/adTutorial.cshtml
@@ -11,7 +11,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#step-1">
                     <div class="num">1</div>
-                    Completar informacion compañia
+                    Completar información compañia
                 </a>
             </li>
             <li class="nav-item">
@@ -29,7 +29,7 @@
             <li class="nav-item">
                 <a class="nav-link " href="#step-4">
                     <span class="num">4</span>
-                    Añadir razones de cancelacion de vales
+                    Añadir razones de cancelación de vales
                 </a>
             </li>
             <li class="nav-item">
@@ -41,19 +41,19 @@
             <li class="nav-item">
                 <a class="nav-link " href="#step-6">
                     <span class="num">6</span>
-                    Añadir Flotas y Vehiculos
+                    Añadir Flotas y Vehículos
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " href="#step-7">
                     <span class="num">7</span>
-                    Creacion de Usuarios
+                    Creación de Usuarios
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " href="#step-8">
                     <span class="num">8</span>
-                    Asignación de vehiculos a usuarios
+                    Asignación de vehículos a usuarios
                 </a>
             </li>
             @*<li class="nav-item">
@@ -116,13 +116,13 @@
                 Smartwizard: {
                     Cargar: function () {
 
-                        var btnFinish = $('<button></button>').text('Atras')
+                        var btnFinish = $('<button></button>').text('Atrás')
                             .addClass('btn btn-primary btn-custom me-2')
                             .on('click', function () {
                                 //alert('Finish button clicked');
                                 $('#smartwizard').smartWizard("prev");
                             });
-                        var btnCancel = $('<button></button>').text('Sigueinte')
+                        var btnCancel = $('<button></button>').text('Siguiente')
                             .addClass('btn btn-primary btn-custom')
                             .on('click', function () {
                                 //$('#smartwizard').smartWizard("reset");
