--- a/Views/adGasolinera/adGasolinera.cshtml
+++ b/Views/adGasolinera/adGasolinera.cshtml
@@ -421,7 +421,7 @@
 
                         if (EmailGasolinera.length > 0) {
                             if (!validEmail.test(EmailGasolinera)) {
-                                $._combustible.alert("error", "Formato de correo incorrecto", "Debe digitar  un correo valido, por ejemplo usuario@correo.com")
+                                $._combustible.alert("error", "Formato de correo incorrecto", "Debe digitar  un correo válido, por ejemplo usuario@correo.com")
                                 return false
                             }
                         }
