--- a/Views/adProyectos/adProyectos.cshtml
+++ b/Views/adProyectos/adProyectos.cshtml
@@ -42,7 +42,7 @@
                 <div class="container-fluid mt-lg-2">
                     <div class="row mb-lg-2 col-12">
                         <div class="col-lg-3">
-                            <h4 class="text-center">Ingrese su archivo EXEL</h4>
+                            <h4 class="text-center">Ingrese su archivo EXCEL</h4>
                         </div>
 
                     </div>
@@ -62,7 +62,7 @@
                             <button type="button" class="btn btn-success w-100" id="@{@BTN_CargarDatos}" disabled> <i class="bi bi-upload"></i> Guardar datos</button>
                         </div>
                         <div class="col-lg-3 offset-lg-2 offset-1 col-10 d-flex align-items-center justify-content-center mt-2 mt-lg-0 order-lg-4 order-3">
-                            <button type="button" class="btn btn-primary w-100" id="@{@BTN_DownloadFormato}"> <i class="bi bi-download"></i> Descargar formato archivo EXEL</button>
+                            <button type="button" class="btn btn-primary w-100" id="@{@BTN_DownloadFormato}"> <i class="bi bi-download"></i> Descargar formato archivo EXCEL</button>
                         </div>
                         <div class="col-lg-2 mt-3 col-10 offset-1 offset-lg-0 mt-lg-0 d-flex align-items-center justify-content-center order-lg-4 order-4">
                             <button type="button" class="btn btn-success w-100 d-flex justify-content-between" id="@{@BTN_ShowHidePEP}">
@@ -323,7 +323,7 @@
 
                                 var JSON = data[1]//Se obtienen los datos 
                                 if (JSON.length < 1) { //Se valida que no sea un exel vacio
-                                    $.ModuloProyectos.alert("error", "Archivo vacio", "El arcivo no contiene datos")
+                                    $.ModuloProyectos.alert("error", "Archivo vacío", "El archivo no contiene datos")
                                     return false
                                 }
 
@@ -332,7 +332,7 @@
                                 /*Se verifica que el arhivo tenga los titulos correctos, es decir el formato */
                                 if (titles["Titulo-1"] != "Codigo Proyecto" || titles["Titulo-2"] != "Nombre del Proyecto" || titles["Titulo-3"] != "Responsable" || titles["Titulo-4"] != "Estado") {
                                     //console.log(titles)
-                                    $.ModuloProyectos.alert("error", "Archivo sin formato", "Debe seleccionar un archivo de exel con el formato correcto")
+                                    $.ModuloProyectos.alert("error", "Archivo sin formato", "Debe seleccionar un archivo de excel con el formato correcto")
                                     return false
                                 }
                                 //console.log("Validacion")
@@ -368,7 +368,7 @@
                                     }
                                      //Se verifica que el Nombre del Proyecto tenga al menos 3 caracteres
                                     if (JSON[i]["Nombre del Proyecto"].trim().length < 3) {
-                                        $.ModuloProyectos.alert("error", "Dato demasiado corto", "El Nombre del Proyecto debe tener como minimo 3 caracteres, verificar la fila N° " + (JSON[i].__rowNum__ + 1))
+                                        $.ModuloProyectos.alert("error", "Dato demasiado corto", "El Nombre del Proyecto debe tener como mínimo 3 caracteres, verificar la fila N° " + (JSON[i].__rowNum__ + 1))
                                         return false
                                         break
                                     }
@@ -678,7 +678,7 @@
                                 columns: [                              
                                     {
                                         field: "codigoProyecto",
-                                        title: "Codigo Proyecto",
+                                        title: "Código Proyecto",
                                         //width: "100px",
                                         attributes: { class: "col-data_@{@GUI_CSS}" },
                                         headerAttributes: { class: "col-data_@{@GUI_CSS}" },
@@ -796,7 +796,7 @@
                             var _this = this 
                             Swal.fire({
                                 title: "¿Esta seguro?",
-                                text: 'La eliminacion de "' + _PEP + '" no es reversible',
+                                text: 'La eliminación de "' + _PEP + '" no es reversible',
                                 icon: "warning",
                                 showCancelButton: true,
                                 confirmButtonColor: "#3085d6",
